--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
       </select>
     </div>
     <div class="form-group">
-      <label for="csv-file">CSVファイル</label>
-      <input type="file" id="csv-file" name="file" accept=".csv" class="form-control-file" required>
+      <label for="csv-file">CSVファイル（複数選択可）</label>
+      <input type="file" id="csv-file" name="file" accept=".csv" multiple class="form-control-file" required>
     </div>
     <div class="selected-file" id="selected-file-info">
       選択されたファイル: <span id="selected-filename">なし</span>
